<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/message_background"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="16dp">

    <!-- User Information -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_robot"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_robot" />
        <TextView
            android:id="@+id/tv_robot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/robot_name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Chat Bubble -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/rounded_gray_border"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_information"
            android:textColor="#455A64"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>