<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!-- Main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

        <!-- Top Section -->
        <LinearLayout
            android:id="@+id/topSection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/front_page"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/bl_more_vert_24"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:contentDescription="@string/todo"
                android:src="@drawable/bl_more_vert_24" />
        </LinearLayout>

        <ListView
            android:id="@+id/conversationList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:divider="@null"
            android:dividerHeight="0dp"
            app:layout_constraintBottom_toTopOf="@id/bottomSection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topSection" />

        <LinearLayout
            android:id="@+id/bottomSection"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="18"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_pdf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/iv_pdf"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/iv_camera" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_Input"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="40"
                android:background="@drawable/rounded_gray_border"
                android:hint="@string/null_text"
                android:inputType="text"
                android:padding="10dp" />

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/white"
                android:contentDescription="@string/search_button_description"
                android:src="@drawable/ic_search" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Side menu -->
    <LinearLayout
        android:id="@+id/nav_view"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/side_menu_item_01"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/side_menu_item_02"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/side_menu_item_03"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>